--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "beautiful-portfolio",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://jallen105.github.io/Jonathan-portfolio",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -29,6 +32,7 @@
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
+    "gh-pages": "^6.3.0",
     "globals": "^16.4.0",
     "vite": "^7.1.7"
   }
