--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "beautiful-portfolio",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://jallen105.github.io/Jonathan-portfolio",
+  "homepage": "https://jallen105.github.io/Jonathan-portfolio/",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
